--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "sass": "^1.86.3"
+    "react-router-dom": "^7.5.0",
+    "react-slick": "^0.30.3",
+    "sass": "^1.86.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
